--- a/Kalkulačka/MainWindow.xaml
+++ b/Kalkulačka/MainWindow.xaml
@@ -7,6 +7,25 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="400">
     <Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="0.4*"/>
+			<RowDefinition/>
+		</Grid.RowDefinitions>
 
+		<Grid Grid.Row="1">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition/>
+				<ColumnDefinition/>
+				<ColumnDefinition/>
+				<ColumnDefinition/>
+			</Grid.ColumnDefinitions>
+
+			<Grid.RowDefinitions>
+				<RowDefinition/>
+				<RowDefinition/>
+				<RowDefinition/>
+				<RowDefinition/>
+			</Grid.RowDefinitions>
+		</Grid>
     </Grid>
 </Window>
