--- a/Kalkulačka/View/UserControls/NumberButton.xaml
+++ b/Kalkulačka/View/UserControls/NumberButton.xaml
@@ -1,14 +1,14 @@
-﻿<UserControl x:Class="Kalkulačka.View.UserControls.Tlacitko"
+﻿<UserControl x:Class="Kalkulačka.View.UserControls.NumberButton"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Kalkulačka.View.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="100" d:DesignWidth="100">
+             Width="auto" Height="auto">
     <Grid d:Background="White">
-		<Button x:Name="btnCislo" d:Content="1" Content="{Binding}" FontSize="24" FontWeight="Bold" Background="Transparent"
-				Click="btnCislo_Click"/>
-		
+		<Button x:Name="btnNumber" Background="LightGray"
+				FontSize="24" FontWeight="Bold" VerticalAlignment="Center"
+				HorizontalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
 	</Grid>
 </UserControl>
