--- a/Kalkulačka/MainWindow.xaml
+++ b/Kalkulačka/MainWindow.xaml
@@ -13,6 +13,10 @@
           <RowDefinition/>
         </Grid.RowDefinitions>
 
+        <!--Číslo-->
+		<TextBlock x:Name="tbNumber" Text="{Binding Number, UpdateSourceTrigger=PropertyChanged}" FontSize="40" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="20"/>
+
+		<!-- Tlačítka -->
         <Grid Grid.Row="1">
           <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -21,14 +25,22 @@
             <ColumnDefinition/>
           </Grid.ColumnDefinitions>
 
-          <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-          </Grid.RowDefinitions>
-
-			<buttons:NumberButton Content="0">
+			<Grid.RowDefinitions>
+				<RowDefinition/>
+				<RowDefinition/>
+				<RowDefinition/>
+				<RowDefinition/>
+			</Grid.RowDefinitions>
+			<Button Content="1" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="2" Click="Button_Click"/>
+			<Button Content="2" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="2"/>
+			<Button Content="3" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="2"/>
+			<Button Content="4" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="1"/>
+			<Button Content="5" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="1"/>
+			<Button Content="6" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="1"/>
+			<Button Content="7" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="0"/>
+			<Button Content="8" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="0"/>
+            <Button Content="9" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="0"/>
+			<Button Content="0" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="3"/>
 		</Grid>
     </Grid>
 </Window>
