--- a/Kalkulačka/MainWindow.xaml
+++ b/Kalkulačka/MainWindow.xaml
@@ -31,16 +31,23 @@
 				<RowDefinition/>
 				<RowDefinition/>
 			</Grid.RowDefinitions>
+			<!--Cisla-->
 			<Button Content="1" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="2" Click="Button_Click"/>
-			<Button Content="2" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="2"/>
-			<Button Content="3" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="2"/>
-			<Button Content="4" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="1"/>
-			<Button Content="5" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="1"/>
-			<Button Content="6" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="1"/>
-			<Button Content="7" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="0"/>
-			<Button Content="8" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="0"/>
-            <Button Content="9" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="0"/>
-			<Button Content="0" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="3"/>
+			<Button Content="2" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="2" Click="Button_Click"/>
+			<Button Content="3" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="2" Click="Button_Click"/>
+			<Button Content="4" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="1" Click="Button_Click"/>
+			<Button Content="5" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="1" Click="Button_Click"/>
+			<Button Content="6" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="1" Click="Button_Click"/>
+			<Button Content="7" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Click="Button_Click"/>
+			<Button Content="8" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="0" Click="Button_Click"/>
+			<Button Content="9" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="0" Click="Button_Click"/>
+			<Button Content="0" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="3" Click="Button_Click"/>
+			
+			<!--Funkce-->
+			<Button Content="*" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="1" Click="Button_Click"/>
+			<Button Content="/" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="0" Click="Button_Click"/>
+			<Button Content="+" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="2" Click="Button_Click"/>
+			<Button Content="-" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="3" Click="Button_Click"/>
 		</Grid>
     </Grid>
 </Window>
