--- a/Kalkulačka/MainWindow.xaml
+++ b/Kalkulačka/MainWindow.xaml
@@ -41,13 +41,14 @@
 			<Button Content="7" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Click="Button_Click"/>
 			<Button Content="8" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="0" Click="Button_Click"/>
 			<Button Content="9" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="0" Click="Button_Click"/>
-			<Button Content="0" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="3" Click="Button_Click"/>
+			<Button Content="0" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.ColumnSpan="2"  Grid.Row="3" Click="Button_Click"/>
 			
 			<!--Funkce-->
-			<Button Content="*" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="1" Click="Button_Click"/>
-			<Button Content="/" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="0" Click="Button_Click"/>
-			<Button Content="+" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="2" Click="Button_Click"/>
-			<Button Content="-" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="3" Click="Button_Click"/>
+			<Button Content="/" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="0" Click="Button_Do_Action"/>
+			<Button Content="*" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="1" Click="Button_Do_Action"/>
+			<Button Content="+" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="2" Click="Button_Do_Action"/>
+			<Button Content="-" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="3" Click="Button_Do_Action"/>
+			<Button Content="=" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="3" Click="Button_Calculate"/>
 		</Grid>
     </Grid>
 </Window>
