--- a/Kalkulačka/MainWindow.xaml
+++ b/Kalkulačka/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:buttons="clr-namespace:Kalkulačka.View.UserControls"
         xmlns:local="clr-namespace:Kalkulačka"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="400">
+        Title="Kalkulačka" Height="600" Width="400">
     <Grid>
         <Grid.RowDefinitions>
           <RowDefinition Height="0.4*"/>
@@ -29,26 +29,28 @@
 				<RowDefinition/>
 				<RowDefinition/>
 				<RowDefinition/>
-				<RowDefinition/>
-			</Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
 			<!--Cisla-->
-			<Button Content="1" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="2" Click="Button_Click"/>
-			<Button Content="2" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="2" Click="Button_Click"/>
-			<Button Content="3" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="2" Click="Button_Click"/>
-			<Button Content="4" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="1" Click="Button_Click"/>
-			<Button Content="5" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="1" Click="Button_Click"/>
-			<Button Content="6" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="1" Click="Button_Click"/>
-			<Button Content="7" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Click="Button_Click"/>
-			<Button Content="8" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="0" Click="Button_Click"/>
-			<Button Content="9" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="0" Click="Button_Click"/>
-			<Button Content="0" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.ColumnSpan="2"  Grid.Row="3" Click="Button_Click"/>
+			<Button Content="1" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="3" Click="Button_Click"/>
+			<Button Content="2" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="3" Click="Button_Click"/>
+			<Button Content="3" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="3" Click="Button_Click"/>
+			<Button Content="4" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="2" Click="Button_Click"/>
+			<Button Content="5" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="2" Click="Button_Click"/>
+			<Button Content="6" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="2" Click="Button_Click"/>
+			<Button Content="7" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.Row="1" Click="Button_Click"/>
+			<Button Content="8" FontSize="24" FontWeight="Bold" Grid.Column="1" Grid.Row="1" Click="Button_Click"/>
+			<Button Content="9" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="1" Click="Button_Click"/>
+			<Button Content="0" FontSize="24" FontWeight="Bold" Grid.Column="0" Grid.ColumnSpan="2"  Grid.Row="4" Click="Button_Click"/>
 			
 			<!--Funkce-->
-			<Button Content="/" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="0" Click="Button_Do_Action"/>
-			<Button Content="*" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="1" Click="Button_Do_Action"/>
-			<Button Content="+" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="2" Click="Button_Do_Action"/>
-			<Button Content="-" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="3" Click="Button_Do_Action"/>
-			<Button Content="=" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="3" Click="Button_Calculate"/>
+			<Button Content="/" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="1" Click="Button_Do_Action"/>
+			<Button Content="*" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="2" Click="Button_Do_Action"/>
+			<Button Content="+" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="3" Click="Button_Do_Action"/>
+			<Button Content="-" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="4" Click="Button_Do_Action"/>
+			<Button Content="=" FontSize="24" FontWeight="Bold" Grid.Column="2" Grid.Row="4" Click="Button_Calculate"/>
+			<Button Content="C" FontSize="24" FontWeight="Bold" Grid.Column="3" Grid.Row="0" Click="Button_Delete"/>
 		</Grid>
     </Grid>
 </Window>
